<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="workshop.hello.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/num1" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:text="+"
            android:onClick="onAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plusBtn"/>

        <Button
            android:text="-"
            android:onClick="onMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minusBtn"/>

    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/num2" />

    <Button
        android:text="Calculate"
        android:onClick="onCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calBtn"/>

    <TextView
        android:text="0"
        android:textSize="50sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/result" />


</LinearLayout>
